# roistudio

./: .gitignore  colors.py  config.yml  main.py  pyproject.toml  requirements.txt  roi_controller.py  roi_model.py  roi_view.py  roistudio.spec  roistudio_tree.txt
.github/workflows/: build.yml
controllers/: controller.py  scene_controller.py  sparc_controller.py
models/: model.py
utils/: __init__.py  converters.py  paths.py  visualizers.py
views/: __init__.py  canvas.py  panels.py  view.py  widgets.py
views/panels/: __init__.py  image_editing.py  image_selection.py  parameter_selection.py  spectral_view.py  status.py
workers/: __init__.py  scene_loader.py  scene_scanner.py  sparc_runner.py
